2-containers-1-domain/Kubernetes/vueapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-app
spec:
  type: NodePort
  selector:
    app: vue-app
  ports:
  - port: 80
    targetPort: 80
